--- a/src/components/container/style/home.scss
+++ b/src/components/container/style/home.scss
@@ -78,6 +78,12 @@
       padding-right: 120px !important;
     }
   }
+
+  @media screen and (min-width: 769px){
+    .pagination-list {
+        justify-content: flex-end!important;
+    }
+  }
   
   /** general **/
   
