--- a/src/components/container/styles/signup.scss
+++ b/src/components/container/styles/signup.scss
@@ -6,17 +6,21 @@
   font-size: 1rem;
 }
 
-html {
+.grey-background {
   background-color: #F4F4F4;
+  height: 100vh;
+  width: 100vw;
+  padding-top: 5%;
+
 }
 
 .signup-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  margin: 5% auto;
   background-color: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  // margin: 5% auto;
 }
 
 .signup-left {
@@ -116,9 +120,6 @@ html {
 }
 
 @media only screen and (max-width: 767px) {
-  html {
-    background-color: #fff;
-  }
   .container {
     grid-template-columns: 1fr;
     box-shadow: none;
