feat(login): complete login functionality - persist login state to localStorage - move api request to redux actions - create action and reducer for notification component - write tests for login component - write tests for login actions and reducer - write tests for notification component - write tests for notification actions and reducer - write tests for all presentational components [Finishes #161290858]

--- a/src/components/presentational/button/styles/Button.scss
+++ b/src/components/presentational/button/styles/Button.scss
@@ -1,14 +1,14 @@
-@import '../../../utilities/_variables.scss';
+@import '../../../../utilities/_variables.scss';
 
-.button {
+.form-button {
   background-color: $ah-primary;
   color: white;
   border-style: none;
   border-radius: 3px;
-  padding: .3em 4em;
+  padding: 1em 5em;
 }
 
-.button:hover {
+.form-button:hover {
   opacity: .8;
   color: white;
   cursor: pointer;
