--- a/src/components/container/login/styles/Login.scss
+++ b/src/components/container/login/styles/Login.scss
@@ -1,17 +1,9 @@
-@import '../../../utilities/_variables.scss';
-
-* {
-  transition: .3s;
-}
-
-html {
-  background-color: #F4F4F4;
-}
+@import '../../../../utilities//variables';
 
 .login-left {
   height: 600px;
   width: 500px;
-  background-image: url('../../../static/images/login-img.jpg');
+  background-image: url('../../../../static//images/login-img.jpg');
   background-position: center;
   background-color: #F4F4F4;
 }
@@ -23,6 +15,18 @@ html {
   background-color: #fff;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.10);
   font-size: 1em;
+
+  .login-intro-container {
+    margin-bottom: 1.5em;
+  }
+
+  .login-right {
+    padding: 2em;
+  }
+
+  input::placeholder {
+    font-size: .8em;
+  }
 
     h2 {
       font-weight: bold;
@@ -42,7 +46,7 @@ html {
    }
 }
 
-@media only screen and (max-width: $desktop-large) {
+@media only screen and (max-width: $ipad) {
   html {
     background-color: #fff;
   }
@@ -58,6 +62,10 @@ html {
     .login-left {
       display: none;
     }
+
+    .form-button {
+      width: 100%;
+    }
   }
 }
 
@@ -70,6 +78,7 @@ html {
 .cta a {
   text-decoration: none;
   color: $ah-primary;
+  font-size: .8em;
 }
 
 .cta a:hover {
