--- a/src/components/container/styles/createArticle.scss
+++ b/src/components/container/styles/createArticle.scss
@@ -254,7 +254,7 @@ button {
   border-radius: 3px;
   padding: 0.4em 4em;
   font-weight: bold;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 #editor {
