--- a/src/components/container/home/style/home.scss
+++ b/src/components/container/home/style/home.scss
@@ -125,6 +125,9 @@
     padding-top:20px;
     border-top: solid 1px #E66869;
   }
+  .read-more{
+    cursor:pointer;
+  }
   
   
   /** general **/
