add header and logout

--- a/src/components/presentational/home/style.scss
+++ b/src/components/presentational/home/style.scss
@@ -3,3 +3,11 @@
         justify-content: flex-end!important;
     }
   }
+
+.elipses {
+    // pointer-events: none;
+    // cursor: default;
+    // text-decoration: none;
+    // color: black;
+    // background: rgb(37, 120, 189);
+}
