--- a/src/components/common/style/footer.scss
+++ b/src/components/common/style/footer.scss
@@ -1,4 +1,13 @@
-footer{
-    
-    
+.footer {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-height: 50px;
+  padding: 1em;
+  text-align: left;
+  background-color: black;
+  color: grey;
+  z-index: 500;
+  margin-top: 5%;
 }
