--- a/src/components/common/style/header.scss
+++ b/src/components/common/style/header.scss
@@ -1,85 +1,104 @@
-.nav_bar {
-    background: #fff;
-    border-bottom: 1px solid #ccc;
-    width: 100vw;
-    height: 50px;
-    line-height: 50px;
-    padding-left: 12px;
-  }
-  .logo-size{
-    height: 50px
-  }
-  .logo-position{
-    position:absolute;
-    left:5px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+@import '../../../utilities/variables';
 
+body {
+  margin: 0;
+}
+
+.nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  justify-content: stretch;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  align-items: center;
+  z-index: 100;
+  top: 0;
+  position: sticky;
+  background-color: white;
+
+  .nav-left {
+    justify-self: start;
+    align-items: center;
   }
-  @media(max-width:768px){
-    .logo-position {
-      left: 50%;
-      top: 35px;
-  }
-  }
-  @media(max-width:465px){
-    .logo-position{
-      left: 25%;
-    }
-    .logo-size{
-      height: 40px
-    }
-    
+  
+  .nav-right {
+    justify-self: end;
+    align-items: center;
+    display: block!important;
+    position: fixed;
+    top: 67px;
+    bottom: 0;
+    right: -40%;
+    width: 40%;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: -10px 0px 12px -6px rgba(0,0,0,0.3);
+    transition: .3s ease-out;
   }
 
-  
-  .topnav-centered {
-    float: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .nav-logged-in {
+    display: none;
   }
   
-  .global_toolbar {
-    ul {
-      margin: 0;
-      padding: 0 20px 0 0;
-      li {
-        list-style: none;
-        margin: 0;
-        padding: 0 0 0 5px;
-        display: inline-block;
-        position: relative;
-        a {
-          vertical-align: middle;
-        }
-      }
+  .nav-item {
+    display: block;
+    background-color: white;
+    cursor: pointer;
+
+    svg {
+      width: 20px;
     }
-    float: right;
+
+    span {
+      padding-left: .5em;
+    }
   }
   
-  input {
-    margin: 0;
-    padding: 5px 20px 5px 5px;
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    border: 1px solid #fff;
-    font-size: 14px;
-    text-align: left;
-    width: 0;
-    transition: 0.1s border linear, 0.25s width linear;
-    &:focus {
-      border: 1px solid #fff;
+  .nav-search {
+    font-size: 1em;
+    padding: .5em;
+    width: 40px;
+    border-style: none;
+    border-radius: 3em;
+    transition: 0.25s linear;
+    &:hover, &:focus {
       outline: none;
-      width: 200px;
-      transition: 0.1s border linear, 0.25s width linear;
+      width: 90%;
+      transition: 0.25s linear;
+      background-color: rgba(0, 0, 0, 0.1);
     }
   }
   
-  @media (max-width: 612px) {
-    .search-bar {
-      display: none;
+  .nav-link {
+    display: block;
+    color: $ah-primary;
+    font-size: .8em;
+    text-decoration: none;
+    width: 100%;
+    padding: 1em;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0;
+    &:hover, &:focus {
+      background-color: $ah-primary;
+      color: white;
+      transition: 0.2s all linear;
+      border-radius: 0;
     }
   }
+  
+  .burger {
+    display: inline-block;
+    height: 35px;
+    width: 35px;
+    &:hover {
+      background-color: transparent;
+      color: $ah-primary;
+      transition: all .25s ease-in;
+    }
+  }
+  
+  .show-menu {
+    right: 0!important;
+  }
+}
+
