--- a/src/components/container/styles/Home.scss
+++ b/src/components/container/styles/Home.scss
@@ -107,6 +107,13 @@
       min-height: auto;
     }
   }
+
+  .bookmark-button{
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+    cursor: pointer;
+  }
   
   .is-curvedtop {
     border-top-left-radius: 20px;
@@ -291,4 +298,35 @@
   .feat-section {
     padding-left: 24px;
     padding-right: 24px;
+  }
+
+  /*** TOOL TIP ***/
+
+  .tooltip {
+    cursor: pointer;
+    display: inline-block;
+    .tooltiptext {
+      font-size: 10px!important;
+      width: 100px;
+      height: 20px;
+      box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+      visibility: hidden;
+      background-color: white;
+      color: #4a4a4a;
+      border: solid 1px #f5f5f5;
+      text-align: center;
+      border-radius: 2px;
+      padding: 0px 0;
+      position: absolute;
+      z-index: 1;
+      bottom: 100%;
+      left: 0%;
+      margin-left: -70px;
+      opacity: 0;
+      transition: opacity 0.8s;
+    }
+    &:hover .tooltiptext {
+      visibility: visible;
+      opacity: 1;
+    }
   }
