--- a/src/components/container/styles/Home.scss
+++ b/src/components/container/styles/Home.scss
@@ -1,6 +1,16 @@
 .full-height{
     min-height: 80vh;
   }
+
+  figure.image {
+    display: block!important;
+    border: 0px solid gray!important;
+    margin: 0 0px 0 0px!important;
+    background: transparent!important;
+   }
+   figure.image img {
+   margin: 0px 0px 0px !important;
+   }
   /** categories **/
   
   .categories {
