--- a/src/components/container/styles/Bookmark.scss
+++ b/src/components/container/styles/Bookmark.scss
@@ -3,8 +3,9 @@
   }
   .bookmark-remove{
     cursor: pointer;
-    
-    border: none
+    text: black;
+    background: transparent;
+    border: none!important;
   }
   .bookmark-remove:hover{
     color: red;
