--- a/src/components/container/styles/Profile.scss
+++ b/src/components/container/styles/Profile.scss
@@ -25,6 +25,7 @@
           }
 
           .ul-profile {
+            background-color: #f4f4f4;
             width: 100%;
             height: 50px;
             overflow-x: scroll;
