change button bg color

--- a/src/components/container/styles/Search.scss
+++ b/src/components/container/styles/Search.scss
@@ -104,6 +104,7 @@ $box-shadow-inset: inset 0 0 5px rgba(57,73,76,0.35);
       }
 
       .remove-author-filter {
+        background-color: #111;
         padding: .4em;
         margin: .4em auto;
         cursor: pointer;
