Feature(Rating) User Article Ratings - Add rate icons to single article page - Add functionality that triggers click actions - Add file to handle rating logic - Write functions to handle click events - Add file redux reducer and action dispatcher functions - Write test to test each component, actions and reducers - Write tests to validate functionality
[Finishes #161290862]

--- a/src/components/presentational/Home/style.scss
+++ b/src/components/presentational/Home/style.scss
@@ -1,6 +1,11 @@
-    @media screen and (min-width: 769px){
+@media screen and (min-width: 769px) {
     .pagination-list {
         justify-content: flex-end!important;
     }
-  }
+}
   
+.pagination-link.is-current {
+    background-color: #ff3860;
+    border-color: #ff3860;
+    color: #fff;
+}
